chenged outline propery for input

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -58,6 +58,7 @@ $dark-theme: #777;
     height: 25px; 
     padding-left: 10px;
     border: none;
+    outline: none;
     background-color: $light-theme;
     font-size: 14px;
   }
