--- a/src/components/SideMenu.scss
+++ b/src/components/SideMenu.scss
@@ -1,9 +1,12 @@
+$hover-color: #e5e5e5;
+
 %side-menu-box {
   display: flex;
   align-items: center;
   height: 40px;
-  margin-left: 40px;
-  padding: 10px 0px;
+  width: 240px;
+  margin: auto;
+  padding: 10px 15px;
   font-size: 14px;
   position: relative;
 
@@ -13,9 +16,14 @@
   }
 }
 
+%side-menu-box:hover {
+  border-radius: 5px;
+  background-color: $hover-color;
+}
+
 %ellipsis-overflow {
   display: inline-block;
-  width: 170px;
+  width: 150px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -28,6 +36,7 @@
 // add to common styles
 @mixin solid-line($width-value) {
   width: $width-value;
+  height: 2px;
   margin: auto;
   border-top: 1px solid #949494; 
 }
@@ -53,7 +62,7 @@
    
   .options {
     position: absolute;
-    right: 15px;
+    right: 0px;
   }
 }
 
