--- a/src/containers/TodoListContainer.scss
+++ b/src/containers/TodoListContainer.scss
@@ -1,7 +1,8 @@
 .todo-list-container {
   display: grid;
-  grid-template-columns: 300px calc(100% - 300px);
-  grid-template-rows: 60px calc(100% - 60px);
+  height: 100vh;
+  grid-template-columns: 300px auto;
+  grid-template-rows: 60px auto;
   grid-template-areas: 
     'header header'
     'sidebar main';
